--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@firebase/logger": "^0.2.6",
     "@firebase/util": "^0.3.4",
     "@firebase/webchannel-wrapper": "^0.4.1",
+    "@react-native-firebase/app": "^11.5.0",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
-    "firebase": "8.2.3",
+    "firebase": "^8.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
