--- a/package.json
+++ b/package.json
@@ -14,14 +14,22 @@
     "@firebase/webchannel-wrapper": "^0.4.1",
     "@react-native-firebase/app": "^11.5.0",
     "expo": "~41.0.1",
+    "expo-constants": "^10.1.3",
+    "expo-google-app-auth": "^8.1.7",
+    "expo-image-picker": "~10.1.4",
+    "expo-permissions": "^12.0.1",
     "expo-status-bar": "~1.0.4",
     "firebase": "^8.6.1",
     "from": "^0.1.7",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-elements": "^3.4.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.4",
+    "react-native-normalize": "^1.0.1",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
+    "react-navigation-drawer": "^2.7.1",
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
