--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "expo-permissions": "^12.0.1",
     "expo-status-bar": "~1.0.4",
     "firebase": "^8.6.1",
+    "force": "^0.0.3",
     "from": "^0.1.7",
+    "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
