--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-elements": "^3.4.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-normalize": "^1.0.1",
+    "react-native-sqlite-storage": "^5.0.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
     "react-navigation-drawer": "^2.7.1",
